Sửa lỗi thiếu trường cho users
